# OptiFi

./: .gitignore  .prettierignore  Anchor.toml  README.md  package-lock.json
app/: package-lock.json  package.json
docs/: Vision.MD
programs/optifi/: Cargo.toml
programs/optifi/src/: lib.rs
tests/: optifi.ts
